# modular_synth

./: .editorconfig  CMakeLists.txt  README.md
src/: audio.cpp  audio.hpp  main.c  main.h  modules.cpp  modules.hpp  osc.c  osc.cpp  osc.h  osc.hpp  rack.cpp  vca.c  vca.h
